--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anshuman Pattnaik</title>
+    <title>Pranav Garg</title>
     <link rel="icon" href="assets/logo/p.png" type="image/x-icon">
     <!-- remix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -29,11 +29,11 @@
         <div id="home-page">
             <div class="nav">
                 <div class="nav-left">
-                    <p class="author-logo">anshuman pattnaik</p>
+                    <p class="author-logo">Pranav garg</p>
                 </div>
                 <div class="nav-right">
-                    <a href="#" class="show-reel">our showreel</a>
-                    <a href="#" class="menu-pull">menu</a>
+                    <a href="#" class="show-reel">My showreel</a>
+                    <a href="#" class="menu-pull">Menu</a>
                     <i class="ri-git-close-pull-request-line" id="menu-symbol"></i>
                 </div>
             </div>
@@ -94,31 +94,31 @@
                 </div>
                 <div class="featured-body">
 
-                    <a href="https://github.com/ANSHPG/Chordopolis-ANSHP" target="_blank">
+                    <a href="https://github.com/Pranav140/Parallax.git" target="_blank">
                         <div class="project-body scroll-1 bts-anshp" style="margin-top:0vw;" data-cursor-text="view">
                             <div class="project-description">
-                                <p class="project-name">BTS X ANSHP</p>
-                                <p class="project-short-description">Concept of <span class="special">piano embed</span>
+                                <p class="project-name">Parallax</p>
+                                <p class="project-short-description">Concept of <span class="special">Parallax effect</span>
                                     <br>in websites.
                                 </p>
                                 <p class="project-tags">design , development , product</p>
                             </div>
                             <div class="project-preview">
-                                <img src="assets/BTS X ANSHP.png" alt="BTS X ANSHP" class="project-asset">
+                                <img src="assets/Screenshot 2024-09-16 170920.png" alt="Parallax" class="project-asset">
                             </div>
                         </div>
                     </a>
 
-                    <a href="https://github.com/ANSHPG/WeatherApp-ANSHP" target="_blank">
+                    <a href="https://github.com/Pranav140/Horizontal-scroll-gallery.git" target="_blank">
                         <div class="project-body anshp-cast" data-cursor-text="view">
                             <div class="project-description">
-                                <p class="project-name">anshp cast</p>
+                                <p class="project-name">UI-UX Gallery</p>
                                 <p class="project-short-description" style="color: #817f7f;"><span
-                                        class="special-2">Navigating</span> Weather's <br> Every Twist and Turn</p>
-                                <p class="project-tags">API , Non-Profit , product</p>
+                                        class="special-2">Navigating</span> Designs <br> Every Twist and Turn</p>
+                                <p class="project-tags">UI , GSAP , Animated</p>
                             </div>
                             <div class="project-preview">
-                                <img src="assets/ANSHP-CAST-2.png" alt="ANSHP-CAST" class="project-asset">
+                                <img src="assets/ui-ux.png" alt="UI-UX" class="project-asset">
                             </div>
                         </div>
                     </a>
@@ -154,7 +154,7 @@
                 </div>
 
             </div>
-            <a href="https://github.com/ANSHPG" target="_blank">
+            <a href="https://github.com/Pranav140" target="_blank">
                 <div class="view-projects">
                     <button data-cursor-text="products">view all products</button>
             </a>
@@ -170,16 +170,16 @@
                 <p>I'm avaliable on...</p>
             </div>
             <div class="third-page-lower">
-                <a href="https://www.linkedin.com/in/anshuman-pattnaik-9694a3255" target="_blank"><button
+                <a href="www.linkedin.com/in/pranav-garg-4729ab277" target="_blank"><button
                         data-cursor-text="linkedin"><i class="ri-linkedin-box-fill"></i><span class="third-page-text"
                             id="linkedin-btn">
                             Linkedin</span></button>
                 </a>
-                <a href="https://www.instagram.com/anshphere" target="_blank"><button data-cursor-text="instagram"><i
+                <a href="https://www.instagram.com/pranav.garg" target="_blank"><button data-cursor-text="instagram"><i
                             class="ri-instagram-fill"></i><span class="third-page-text" id="instagram-btn">
                             instagram</span></button>
                 </a>
-                <a href="mailto:helloanshu04@gmail.com?subject=Want to connect&body=Hello nice to meet you"
+                <a href="mailto:gargpranav851@gmail.com?subject=Want to connect&body=Hello nice to meet you"
                     target="_blank" class="gmail-a"><button data-cursor-text="Gmail"><i class="ri-mail-fill"></i><span
                             class="third-page-text" id="gmail-btn">
                             gmail</span></button>
@@ -195,7 +195,7 @@
                 <p>and design</p>
                 <p class="resources">resources</p>
             </div>
-            <a href="https://github.com/ANSHPG" target="_blank">
+            <a href="https://github.com/Pranav140" target="_blank">
                 <div class="fourth-page-middle">
                     <button id="github-btn" data-cursor-text="Git-Hub"><i class="ri-github-fill"></i> git-hub</button>
                 </div>
