--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                                 data-cursor-img="assets/home-page-imgs/violet-tree.jpg">end</span><span
                                 data-cursor-img="assets/home-page-imgs/orange-sunset.jpg"> Deve</span><span
                                 data-cursor-img="assets/home-page-imgs/white-harbour.jpg">loper.</span></p>
+                                
                     </div>
                     <div class="cover based-container">
                         <p class="content-lower cover-content">based in India.</p>
@@ -173,8 +174,8 @@
                 </div>
             </a>
             <div class="fourth-page-lower">
-                <p>I regularly release designs, offer advice to newbie designers, walk you through creating awesome
-                    effects, and share source files.</p>
+                <p>I regularly make interactive designs ,always open for collaborations.
+                    </p>
             </div>
         </div>
     </div>
