projects of products

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <a href="https://github.com/Pranav140" target="_blank">
                 <div class="view-projects">
-                    <button data-cursor-text="products">view all products</button>
+                    <button data-cursor-text="projects">view all projects</button>
             </a>
         </div>
     </div>
